// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Collapse should be support accordion model 1`] = `
<div class="container">
  <div class="fect-collapse__group">
    <div class="fect-collapse">
      <div class="fect-collapse__view" role="collapseButton">
        <div class="title">
          <h3>Test</h3><svg class="fect-collapse__svg--active" viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" fill="none" shape-rendering="geometricPrecision" style="color: currentColor;">
            <path d="M6 9l6 6 6-6"></path>
          </svg>
        </div>
        <!---->
      </div>
      <div class="fect-collapse__expand" style="visibility: visible; height: auto;">
        <div class="fect-collapse__content"> 123456 </div>
      </div>
    </div>
    <div class="fect-collapse">
      <div class="fect-collapse__view" role="collapseButton">
        <div class="title">
          <h3>Test1</h3><svg class="fect-collapse__svg" viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" fill="none" shape-rendering="geometricPrecision" style="color: currentColor;">
            <path d="M6 9l6 6 6-6"></path>
          </svg>
        </div>
        <!---->
      </div>
      <div class="fect-collapse__expand" style="visibility: hidden; height: 0px;">
        <div class="fect-collapse__content"> 1 </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Collapse should be support subTag and shadow mode 1`] = `
<div class="fect-collapse fect-collapse--shadow">
  <div class="fect-collapse__view" role="collapseButton">
    <div class="title">
      <h3>HTML</h3><svg class="fect-collapse__svg" viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" fill="none" shape-rendering="geometricPrecision" style="color: currentColor;">
        <path d="M6 9l6 6 6-6"></path>
      </svg>
    </div>
    <div class="subtitle"><code>HyperText Markup Language</code></div>
  </div>
  <div class="fect-collapse__expand" style="visibility: hidden; height: 0px;">
    <div class="fect-collapse__content">
      <!---->
    </div>
  </div>
</div>
`;

exports[`Collapse should be support title and subtitle 1`] = `
<div class="fect-collapse">
  <div class="fect-collapse__view" role="collapseButton">
    <div class="title">
      <h3>HTML</h3><svg class="fect-collapse__svg" viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" fill="none" shape-rendering="geometricPrecision" style="color: currentColor;">
        <path d="M6 9l6 6 6-6"></path>
      </svg>
    </div>
    <div class="subtitle">HyperText Markup Language</div>
  </div>
  <div class="fect-collapse__expand" style="visibility: hidden; height: 0px;">
    <div class="fect-collapse__content">
      <!---->
    </div>
  </div>
</div>
`;
